--- a/com.waratek.rules.ui.eef/src-gen/com/waratek/rules/providers/rulesMessages.properties
+++ b/com.waratek.rules.ui.eef/src-gen/com/waratek/rules/providers/rulesMessages.properties
@@ -91,6 +91,8 @@ Native_PropertiesEditionPart_ChecksumLabel=Checksum :
 SQLInjectionPropertiesEditionPart_ActionLabel=Action : 
 SQLInjectionPropertiesEditionPart_LogLabel=Log : 
 SQLInjectionPropertiesEditionPart_DatabaseLabel=Database : 
+SQLInjectionPropertiesEditionPart_AnsiQuotesLabel=AnsiQuotes
+SQLInjectionPropertiesEditionPart_NoBackslashEscapesLabel=NoBackslashEscapes
 CommentPropertiesEditionPart_CommentLabel=Comment : 
 PropertiesEditionPart_PropertiesGroupLabel=Properties
 PropertiesEditionPart_EditTableViewerLabel=Edit
